Added upload form, added run.py

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - SETI Webapp</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Flaskr</h1>
-  <ul>
-      <li><a href="{{ url_for('core.home') }}">Home</a>
-  </ul>
+  <h1>SETI Webapp</h1>
+  <!-- <ul> -->
+      <!-- <li><a href="{{ url_for('core.home') }}">Home</a> -->
+  <!-- </ul> -->
 </nav>
 <section class="content">
   <header>
