--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Home{% endblock %}</h1>
+  <h1>{% block title %}Upload{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-    Hello World
+    <form action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data">
+        <label for="file">Image file (.npy):</label>
+        <input type="file" name="file" id="file" />
+        <input type="submit" name="submit" value="Submit" />
+    </form>
+    <img src="placeholder.png" alt="waterfall" />
 {% endblock %}
