--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,18 +1,35 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - SETI Webapp</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>SETI Webapp</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">SETI Webapp</a>
   <!-- <ul> -->
       <!-- <li><a href="{{ url_for('core.home') }}">Home</a> -->
   <!-- </ul> -->
+  </div>
 </nav>
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
+<body>
+  <!-- <header class="bg-primary text-white"> -->
+    <!-- <div class="container text-center"> -->
+    <!-- <div> -->
+  <!-- </header> -->
+  <section id="content">
+    <div class="container">
+      {% block header %}{% endblock %}
+      {% for message in get_flashed_messages() %}
+      <div class="flash">{{ message }}</div>
+      {% endfor %}
+      {% block content %}{% endblock %}
+    </div>
+  </section>
+  
+  <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+  {% block footer %}{% endblock %}
+</body>
