--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -5,10 +5,23 @@
 {% endblock %}
 
 {% block content %}
-    <form action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data">
-        <label for="file">Image file (.npy):</label>
-        <input type="file" name="file" id="file" />
-        <input type="submit" name="submit" value="Submit" />
+    <form id="image-query-form" action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="file">16x128 image file (.npy):</label>
+            <input type="file" class="form-control-file" id="file">
+        </div>
+        
+        <button class="btn btn-primary" type="submit">Query for Nearest Data Point</button>
     </form>
-    <img src="placeholder.png" alt="waterfall" />
+    <table class="table" id="results">
+        <tr><td>ID</td>
+            <td><span id="disp-id"></span></td> </tr>
+        <tr><td>Distance</td><td><span id="disp-dist"></span></td> </tr>
+        <tr><td>Image</td><td><span id="disp-img"></span></td></tr>
+        </tbody>
+    </table>
+{% endblock %}
+
+{% block footer %}
+<script src="{{ url_for('static', filename='form.js') }}"></script>
 {% endblock %}
