added fields in form.js, home.html

--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -18,9 +18,13 @@
 	</div>
     </form>
     <table class="table" id="results">
-        <tr><td>ID</td>
-            <td><span id="disp-id"></span></td> </tr>
         <tr><td>Distance</td><td><span id="disp-dist"></span></td> </tr>
+        <tr><td>Timestamp</td><td><span id="disp-timestamp"></span></td> </tr>
+        <tr><td>Target</td><td><span id="disp-target"></span></td> </tr>
+        <tr><td>Scan Number</td><td><span id="disp-scannum"></span></td> </tr>
+        <tr><td>Coarse Channel</td><td><span id="disp-coarsechnl"></span></td> </tr>
+        <tr><td>Prefix</td><td><span id="disp-prefix"></span></td> </tr>
+        <tr><td>ID</td><td><span id="disp-id"></span></td> </tr>
         <tr><td>Image</td><td><span id="disp-img"></span></td></tr>
         </tbody>
     </table>
