--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - SETI Webapp</title>
+<title>{% block title %}{% endblock %} - Powered by TensorFlow</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">SETI Webapp</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">Powered by TensorFlow</a>
   <!-- <ul> -->
       <!-- <li><a href="{{ url_for('core.home') }}">Home</a> -->
   <!-- </ul> -->
