--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -1,11 +1,15 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Upload{% endblock %}</h1>
+  <h1>{% block title %}Breakthrough Listen Data Query{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
     <form id="image-query-form" action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data"> 
+        <p>Have an interesting radio signal? Our deep learning engine searches the Breakthrough Listen Database for similar signal to yours.
+        Please upload a 16 times stamp by 128 frequency file in npy format. </p>
+
+
         <div class="form-group">
             <label for="file">16x128 image file (.npy):</label>
             <input type="file" class="form-control-file" id="file">
@@ -17,6 +21,8 @@
             <span id="input-error">
 	</div>
     </form>
+
+    <p>We found the following match: </p>
     <table class="table" id="results">
         <tr><td>Distance</td><td><span id="disp-dist"></span></td> </tr>
         <tr><td>Timestamp</td><td><span id="disp-timestamp"></span></td> </tr>
