--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -8,6 +8,7 @@
     <form id="image-query-form" action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data"> 
         <p>Have an interesting radio signal? Our deep learning engine searches the Breakthrough Listen Database for similar signal to yours.</p>
         <p>Please upload a 16 times stamp by 128 frequency file in npy format. </p>
+        <p>Confuse? Download <a href="/public_html/data/example.npy" download="example" </a></p>
 
 
         <div class="form-group">
