--- a/flaskr/templates/core/home.html
+++ b/flaskr/templates/core/home.html
@@ -7,15 +7,28 @@
 {% block content %}
     <form id="image-query-form" action="{{ url_for('core.query_image') }}" method="post" enctype="multipart/form-data"> 
         <p>Have an interesting radio signal? Our deep learning engine searches the Breakthrough Listen Database for a signal similar to yours.</p>
-        <p>Please upload a 16 timestamp by 128 frequency channel file in npy format.
-           You may want to try <a href="/public/340.npy">this sample file</a>.</p>
-
-        <div class="form-group">
+        <p>Please upload a 16 timestamp by 128 frequency channel file in npy format.  You may want to try <a href="/public/340.npy">this sample file</a>.</p> <div class="form-group">
             <label for="file">16x128 image file (.npy):</label>
             <input type="file" class="form-control-file" id="file">
         </div>
+        <div class="form-group">
+            <label for="num-results">Model to use:</label>
+            <select class="form-control" id="model-id">
+                <option value="0">Conv Noise</option>
+                <option value="1">Fully Connected</option>
+            </select>
+        </div>
+ 
+        <div class="form-group">
+            <label for="num-results">Number of results to return:</label>
+            <select class="form-control" id="num-results">
+                <option>1</option>
+                <option>5</option>
+                <option>20</option>
+            </select>
+        </div>
         
-        <button class="btn btn-primary" type="submit">Query for Nearest Data Point</button>
+        <button class="btn btn-primary" type="submit">Search for Similar Images</button>
 
         <div class="form-group" id="input-error-group">
             <span id="input-error">
@@ -23,20 +36,26 @@
     </form>
 
     <div id="results">
-        <p>We found the following match: </p>
-        <table class="table">
-            <tr><td>ID</td><td><span id="disp-id"></span></td> </tr>
-            <tr><td>Distance</td><td><span id="disp-dist"></span></td> </tr>
-            <tr><td>Timestamp</td><td><span id="disp-timestamp"></span></td> </tr>
-            <tr><td>Target</td><td><span id="disp-target"></span></td> </tr>
-            <tr><td>Scan Number</td><td><span id="disp-scannum"></span></td> </tr>
-            <tr><td>Band</td><td><span id="disp-band"></span></td> </tr>
-            <tr><td>Coarse Channel</td><td><span id="disp-coarsechnl"></span></td> </tr>
-            <tr><td>Center Freq</td><td><span id="disp-centerfreq"></span></td> </tr>
-            <tr><td>Prefix</td><td><span id="disp-prefix"></span></td> </tr>
-            <tr><td>Image</td><td><span id="disp-img"></span></td></tr>
+        <p>We found the following matches: </p>
+        <div class="row" id="results-list">
+        </div>
+
+        <h4>Details</h4>
+        <table class="table" id="single-result">
+            <tbody>
+                <tr><td>ID</td><td><span id="disp-id"></span></td> </tr>
+                <tr><td>Distance</td><td><span id="disp-dist"></span></td> </tr>
+                <tr><td>Timestamp</td><td><span id="disp-timestamp"></span></td> </tr>
+                <tr><td>Target</td><td><span id="disp-target"></span></td> </tr>
+                <tr><td>Scan Number</td><td><span id="disp-scannum"></span></td> </tr>
+                <tr><td>Band</td><td><span id="disp-band"></span></td> </tr>
+                <tr><td>Coarse Channel</td><td><span id="disp-coarsechnl"></span></td> </tr>
+                <tr><td>Center Freq</td><td><span id="disp-centerfreq"></span></td> </tr>
+                <tr><td>Prefix</td><td><span id="disp-prefix"></span></td> </tr>
+                <tr><td>Image</td><td><span id="disp-img"></span></td></tr>
             </tbody>
         </table>
+
     </div>
 {% endblock %}
 
